# TCP_Docker_Comms

./: .gitignore  README.md  docker-compose.yml
client_container/: Dockerfile
client_container/work/: CMakeLists.txt  TCPClient.cpp  TCPClient.h  build_run_client.sh  main.cpp
server_container/: Dockerfile
server_container/work/: CMakeLists.txt  TCPServer.cpp  TCPServer.h  build_run_server.sh  main.cpp
server_container/work/log/: server_log_28032022_040611.txt
